<resources>
    <string name="app_name">Calisthenics 4</string>

    <string name="debug">debug</string>

    <string name="actual_reps">Actual Reps</string>

    <string name="next">Next</string>

    <string name="refresh">refresh</string>
    <string name="choose">choose</string>
    <string name="name">Name</string>
    <string name="brief_prompt">Overview and description of what this workout is trying to achieve, who should use this, etc.</string>
    <string name="default_reps_num">10</string>
    <string name="reps">reps</string>
    <string name="time">time</string>
    <string name="details">details</string>
    <string name="select_progressions_title">Select Progression Levels</string>
    <string name="default_brief">There\'s no brief description here…</string>
    <string name="default_author">Anonymous</string>
    <string name="starred_text">Starred</string>
    <string name="top_text">Top Selected</string>
    <string name="created_text">You Created</string>
    <string name="start_title">Calisthenics</string>
    <string name="history_title">History</string>
    <string name="expand_exercises">Expand Exercises</string>
    <string name="exercises_button">Exercises Button</string>
    <string name="workout_overview_tab">Workout Overview</string>
    <string name="routine_overview_tab">Routine Overview</string>
</resources>
